--- a/Doc/DevelopmentPlan/DevelopmentPlan.tex
+++ b/Doc/DevelopmentPlan/DevelopmentPlan.tex
@@ -3,6 +3,7 @@
 \usepackage{booktabs}
 \usepackage{tabularx}
 \usepackage{hyperref}
+\usepackage{xcolor}
 
 \title{SE 3XA3: Development Plan\\T-Rex Acceleration}
 
@@ -25,6 +26,7 @@
 \midrule
 02/02/2021 & Zihao Du, Namit Chopra, Andrew Balmakund & Initial Draft\\
 02/04/2021 & Andrew Balmakund, Namit Chopra, Zihao Du & Second Draft\\
+\textcolor{red}{09/04/2021} & \textcolor{red}{Namit Chopra, Zihao Du, Andrew Balmakund} & \textcolor{red}{Revison 1}\\
 \bottomrule
 \end{tabularx}
 \end{table}
@@ -97,5 +99,7 @@ The following is the link to our project schedule:\\
 \href{https://gitlab.cas.mcmaster.ca/se_3xa3_l3g15/se_3xa3_project/-/tree/master/ProjectSchedule/GanttT-Rex.gan}{\textit{Gantt chart and Resource chart}}
 
 \section{Project Review}
-Will be updated in Revision 1.
+\textcolor{red}{At the end of the course, T-Rex Acceleration was a success. The team not only managed to re-implement the original T-Rex runner game but to also add additional features that provide qualities such as usability, performance, and maintainability to the game. The team worked effectively to meet all deadlines and achieved the goals set at the beginning of the semester. \\\\}
+\textcolor{red}{Reflecting back on the design design for the software architecture of the system, we observed we could followed a PAC (Presentation Abstract Controller). Since each of our model (Abstraction) components have a corresponding view (Presentation) component, we could have added a controller as well. In this way, the controllers of each component will only be communicating with each other, thus simplifying our game controller and making it more maintainable, making debugging and testing much more easier. }\\\\
+\textcolor{red}{In conclusion, the project went smoothly with the team enjoying the development process. All members learned a lot about project management, team working skills, and improved their ability as a developer.}
 \end{document}
