--- a/Doc/SRS/SRS.tex
+++ b/Doc/SRS/SRS.tex
@@ -41,7 +41,7 @@
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
 02/12/2021 & 1.0 & Finished First Version\\
-\textcolor{red}{03/31/2021} & \textcolor{red}{2.0} & \textcolor{red}{Revision 1}\\
+03/31/2021 & 2.0 & Revision 1\\
 \bottomrule
 \end{tabularx}
 \end{table}
@@ -200,7 +200,7 @@ The primary use case of this product is to play the game from start and trying t
 	\textbf{Rationale}: The system shall provide an immersive gaming experience.
 	\item The user must have the option to restart the game or go to the main menu when the game ends (the user hits an obstacle).\\
 	\textbf{Rationale}: The user shall be able to choose if they want to start a new game after the previous game ends. It reduces the amount of time and effort for the user to play another game.
-	\item The user can select to play the game, change the game settings, and select a different character from the main menu.\\
+	\item The user can select to play the game, change the game settings\sout{, and select a different character from the main menu}\textcolor{red}{, and read the instruction}.\\
 	\textbf{Rationale}: The user shall be able to change \sout{settings like volume theme color, and text size in the main menu. } \textcolor{red}{the volume according to their preference from the main menu.} 
 	\item The system shall \sout{display instructions when the user starts a game} \textcolor{red}{ a menu that explains the game instructions and controls.}\\
 	\textbf{Rationale}: The users need to be guided on how to play when playing for the first time.
