--- a/Doc/TestPlan/TestPlan.tex
+++ b/Doc/TestPlan/TestPlan.tex
@@ -44,6 +44,7 @@
 \midrule
 02/23/2021 & 1.0 & Initial Draft\\
 03/04/2021 & 1.1 & Finish First Draft\\
+\textcolor{red}{04/07/2021} & \textcolor{red}{2.0} & \textcolor{red}{Revision 1}\\
 \bottomrule
 \end{tabularx}
 \end{table}
@@ -123,31 +124,31 @@ See Gantt Chart at the following
 
 \begin{enumerate}
 
-\item{test-UI1: Testing main menu play option\\}
+\item{\sout{test-UI1: Testing main menu play option\\}}
 
-Type: Functional, Dynamic, Manual
+\sout{Type: Functional, Dynamic, Manual}
 					
-Initial State: The main menu is loaded and displayed in the game window.
+\sout{Initial State: The main menu is loaded and displayed in the game window.}
 					
-Input: The user clicks on ``Play" button.
+\sout{Input: The user clicks on ``Play" button.}
 					
-Output: The main menu disappears from the screen and the game starts to run. All the game assets, including the character, environment, and sound, are loaded and displayed on the screen.
+\sout{Output: The main menu disappears from the screen and the game starts to run. All the game assets, including the character, environment, and sound, are loaded and displayed on the screen.}
 					
-How test will be performed: A member of the testing team will confirm that the game starts with all assets successfully loaded after the ``Play" button is clicked. 
+\sout{How test will be performed: A member of the testing team will confirm that the game starts with all assets successfully loaded after the ``Play" button is clicked.}
 
-\item{test-UI2: Testing main menu quit option\\}
+\item{\sout{test-UI2: Testing main menu quit option}\\}
 
-Type: Functional, Dynamic, Manual
+\sout{Type: Functional, Dynamic, Manual}
 					
-Initial State: The main menu is loaded and can be seen in the game window.
+\sout{Initial State: The main menu is loaded and can be seen in the game window.}
 					
-Input: The user clicks on ``Quit" button.
+\sout{Input: The user clicks on ``Quit" button.}
 					
-Output: The application gracefully stops running and the game window is closed.
+\sout{Output: The application gracefully stops running and the game window is closed.}
 					
-How test will be performed: A member of the testing team will confirm that the game window closes without errors after the ``Quit" button is clicked. 
+\sout{How test will be performed: A member of the testing team will confirm that the game window closes without errors after the ``Quit" button is clicked.}
 
-\item{test-UI3: Testing change settings\\}
+\item{test-\sout{U13}\textcolor{red}{UI1}: Testing change settings\\}
 Type: Functional, Dynamic, Manual
 					
 Initial State: The game environment is loaded with the default settings.
@@ -158,22 +159,58 @@ Output: The game system responds to the change of each setting.
 					
 How test will be performed: A visual test is used to confirm the different game settings are reflected in the game as intended (theme color, text size). An auditory test is used to confirm the changes in the volume settings are working correctly. 
 
-\item{test-UI4: Testing main menu settings option\\}
+\item{\sout{test-UI4: Testing main menu settings option}\\}
 
-Type: Functional, Dynamic, Manual
+\sout{Type: Functional, Dynamic, Manual}
 					
-Initial State: The main menu is loaded and can be seen in the game window.
+\sout{Initial State: The main menu is loaded and can be seen in the game window.}
 					
-Input: The user clicks on the ``Settings" option.
+\sout{Input: The user clicks on the ``Settings" option.}
 					
-Output: The settings screen is displayed with GIVEN\_OPTIONS.
+\sout{Output: The settings screen is displayed with GIVEN\_OPTIONS.}
 					
-How test will be performed: A member of the testing team will confirm that the GIVEN\_OPTIONS are displayed once the ``Settings" button is clicked.
+\sout{How test will be performed: A member of the testing team will confirm that the GIVEN\_OPTIONS are displayed once the ``Settings" button is clicked.}
 
 \end{enumerate}		
 \paragraph{Keyboard Input}
 
 \begin{enumerate}
+
+\item{\textcolor{red}{test-UI2: Testing main menu play option\\}}
+
+\textcolor{red}{Type: Functional, Dynamic, Manual}
+					
+\textcolor{red}{Initial State: The main menu is loaded and displayed in the game window.}
+					
+\textcolor{red}{Input: The user presses KEYBOARD\_SPACE to play.}
+					
+\textcolor{red}{Output: The main menu disappears from the screen and the game starts to run. All the game assets, including the character, environment, and sound, are loaded and displayed on the screen.}
+					
+\textcolor{red}{How test will be performed: A member of the testing team will confirm that the game starts with all assets successfully loaded after the ``Play" button is pressed.}
+
+\item{\textcolor{red}{test-UI3: Testing main menu quit option}\\}
+
+\textcolor{red}{Type: Functional, Dynamic, Manual}
+					
+\textcolor{red}{Initial State: The main menu is loaded and can be seen in the game window.}
+					
+\textcolor{red}{Input: The user presses KEYBOARD\_Q to quit.}
+					
+\textcolor{red}{Output: The application gracefully stops running and the game window is closed.}
+					
+\textcolor{red}{How test will be performed: A member of the testing team will confirm that the game window closes without errors after the ``Quit" button is pressed.}
+
+\item{\textcolor{red}{test-UI4: Testing main menu settings option}\\}
+
+\textcolor{red}{Type: Functional, Dynamic, Manual}
+					
+\textcolor{red}{Initial State: The main menu is loaded and can be seen in the game window.}
+					
+\textcolor{red}{Input: The user presses KEYBOARD\_S to go to the ``Settings" menu.}
+					
+\textcolor{red}{Output: The settings screen is displayed with GIVEN\_OPTIONS.}
+					
+\textcolor{red}{How test will be performed: A member of the testing team will confirm that the GIVEN\_OPTIONS are displayed once the ``Settings" button is pressed.}
 
 \item{test-UI5: Test jump movement\\}
 
@@ -217,11 +254,11 @@ Type: Functional, Dynamic, Manual
 					
 Initial State: The game is paused.
 					
-Input: The KEYBOARD\_P will be pressed once on the user's keyboard.
+Input: The KEYBOARD\_\sout{P}\textcolor{red}{R} will be pressed once on the user's keyboard.
 					
 Output: The paused menu disappears revealing the current game state; however, the game does not start for another after RESUME\_TIME\_DELAY. The game continues once the countdown from RESUME\_TIME\_DELAY. is over.
 					
-How test will be performed: A visual test is used to verify that when KEYBOARD\_P is pressed, the pause menu starts to count down for RESUME\_TIME\_DELAY. The pause menu disappears and the user can control the character again. The character, background, obstacles, and sound effects resume as well.
+How test will be performed: A visual test is used to verify that when KEYBOARD\_\sout{P}\textcolor{red}{R} is pressed, the pause menu starts to count down for RESUME\_TIME\_DELAY. The pause menu disappears and the user can control the character again. The character, background, obstacles, and sound effects resume as well.
 
 \item{test-UI9: Test end menu restart\\}
 
@@ -229,23 +266,23 @@ Type: Functional, Dynamic, Manual
 					
 Initial State: The game ends and the end menu appears.
 					
-Input: The KEYBOARD\_R will be pressed once on the user's keyboard.
+Input: The KEYBOARD\_\sout{B}\textcolor{red}{R} will be pressed once on the user's keyboard.
 					
-Output: A new game should start after the key is pressed.
+Output: The game should turn to the main menu page.
 					
-How test will be performed: A visual test is used to verify that when KEYBOARD\_R is pressed the end menu disappears and the user enters a new game.	
+How test will be performed: A visual test is used to verify that when KEYBOARD\_\sout{B}\textcolor{red}{R} is pressed, the end menu disappears. The current game session ends and the user goes back to the main menu.	
 
-\item{test-UI10: Test end menu back to menu\\}
+\item{test-UI10: Test end menu quit\\}
 
 Type: Functional, Dynamic, Manual
 					
 Initial State: The game ends and the end menu appears.
 					
-Input: The KEYBOARD\_B will be pressed once on the user's keyboard.
+Input: The KEYBOARD\_\sout{R}\textcolor{red}{Q} will be pressed once on the user's keyboard.
 					
-Output: The game should turn to the main menu page.
+Output: \sout{A new game should start after the key is pressed.}\textcolor{red}{The application gracefully stops running and the game window is closed}
 					
-How test will be performed: A visual test is used to verify that when KEYBOARD\_B is pressed, the end menu disappears. The current game session ends and the user goes back to the main menu.	
+How test will be performed: A visual test is used to verify that when \sout{KEYBOARD\_R is pressed the end menu disappears and the user enters a new game.}\textcolor{red}{KEYBOARD\_Q is pressed the game window closes without errors}	
 
 \item{test-UI11: Test pause quit\\}
 
@@ -258,6 +295,18 @@ Input: The player selects ``Quit'' button in the pause menu.
 Output: The game should turn to the main menu page.
 					
 How test will be performed: A visual test is used to verify that when the `Quit'' button is selected, the current game session ends. The user goes back to the main menu.	
+
+\item{\textcolor{red}{test-UI12: Test instruction menu back\\}}
+
+\textcolor{red}{Type: Functional, Dynamic, Manual}
+					
+\textcolor{red}{Initial State: The game is in the instruction menu.}
+					
+\textcolor{red}{Input: The KEYBOARD\_B will be pressed once on the user's keyboard.}
+					
+\textcolor{red}{Output: The game should turn to the main menu page.}
+					
+\textcolor{red}{How test will be performed: A visual test is used to verify that when KEYBOARD\_B is pressed, the instruction menu disappears. The current game session ends and the user goes back to the main menu.}
 \end{enumerate}
 
 \subsubsection{Game Environment}
@@ -278,13 +327,13 @@ How test will be performed: A visual test is used to verify that a score is show
 
 Type: Functional, Dynamic, Manual
 					
-Initial State: The game is loaded with assets successfully. 
+Initial State: \sout{The game is loaded with assets successfully.}\textcolor{red}{The game is on main menu and loaded with assets successfully. } 
 					
-Input: The ``Play" is pressed to start the game.
+Input: \sout{The ``Play" is pressed to start the game.}\textcolor{red}{KEYBOARD\_H is pressed to show ``How to play" menu.}
 					
-Output: The controls to play the game are displayed on the screen for INSTRUCTION\_DISPLAY\_TIME.
+Output: \sout{The controls to play the game are displayed on the screen for INSTRUCTION\_DISPLAY\_TIME.}\textcolor{red}{An instruction page is shown on the screen.}
 					
-How test will be performed: A member of the testing team will perform a visual test to confirm the game instructions appear on the screen for INSTRUCTION\_DISPLAY\_TIME.
+How test will be performed: \sout{A member of the testing team will perform a visual test to confirm the game instructions appear on the screen for INSTRUCTION\_DISPLAY\_TIME.}\textcolor{red}{ A member of the testing team will perform a visual test to confirm the game instructions appear on the screen after KEYBOARD\_H is pressed on main menu.}
 
 \item{test-GE3: Test sound effects\\}
 
@@ -402,15 +451,15 @@ How test will be performed: A member of the testing team will perform a visual t
 
 \item{test-GM8: Test power-ups spawn\\}
 
-Type: Functional, Dynamic, Manual
+Type: Functional, Dynamic, \sout{Manual} \textcolor{red}{Automated}
 					
-Initial State: The game environment is loaded without the character model and obstacle spawning.
+Initial State: The game environment is loaded without the character model and \sout{obstacle} \textcolor{red}{one powerup} spawning.
 					
-Input: Random power-ups spawning.
+Input: \sout{Random power-ups spawning} \textcolor{red}{A second powerup is spawned at a random time delay after the first powerup spawn time}.
 
-Output: Random order of power-ups generated on the platform moving to the left.
+Output: \sout{Random order of power-ups generated on the platform moving to the left.} \textcolor{red}{The second powerup should spawn at MINIMUM\_SPAWN\_TIME.}
 					
-How test will be performed: A visual test will be used to confirm the spawning of different power-ups occurs in random order.
+How test will be performed: \sout{A visual test will be used to confirm the spawning of different power-ups occurs in random order.} \textcolor{red}{A automated test is used to confirm that the powerup spawn randomly that is at least the MINIMUM\_SPAWN\_TIME.}
 
 
 \item{test-GM9: Test updating highest score\\}
@@ -476,7 +525,7 @@ How test will be performed: A tester will change the volume in the setting menu 
 \begin{enumerate}
 \item{test-PF1: Test average FPS for a regular game session\\}
 
-Type: Functional, Dynamic, Manual
+Type: Functional, Dynamic, \sout{Manual} \textcolor{red}{Automated}
 					
 Initial State: The game environment is loaded with the character and obstacles spawning.
 
@@ -484,11 +533,11 @@ Input: The tester controls the character to dodge the obstacle and survive as lo
 					
 Output: After the current game session has finished, the average FPS will be displayed and should be greater or equal to FPS\_GOAL.
 					
-How test will be performed: A visual test will be used to confirm the average FPS that is displayed and is around FPS\_GOAL after the player's game session has ended. 
+How test will be performed: \textcolor{red}{A pygame method can be used to obtain the current FPS of the application.} A visual test will be used to confirm the average FPS that is displayed and is around FPS\_GOAL after the player's game session has ended.
 
 \item{test-PF2: Test FPS of multiple objects displayed at the same time\\}
 
-Type: Functional, Dynamic, Manual
+Type: Functional, Dynamic, \sout{Manual} \textcolor{red}{Automated}
 					
 Initial State: The game environment is loaded with only the character model.
 
@@ -496,12 +545,12 @@ Input: Varying number of obstacles and power-ups spawning in.
 					
 Output: The FPS will be displayed to show the effect of increasing the number of obstacles and power-ups spawned.
 					
-How test will be performed: A visual test will be used to confirm the FPS for varying inputs of the number of obstacles and power-ups spawned simultaneously. 
+How test will be performed: \textcolor{red}{A pygame method can be used to obtain the current FPS of the application.} A visual test will be used to confirm the FPS for varying inputs of the number of obstacles and power-ups spawned simultaneously. 
 
 
 \item{test-PF3: Test input response time for character movement\\}
 
-Type: Functional, Dynamic, Manual
+Type: Functional, Dynamic, Manual, \textcolor{red}{Automated}
 					
 Initial State: The game environment is loaded with the character model, obstacles, and power-ups spawning.
 
@@ -513,13 +562,13 @@ How test will be performed: A visual test will be used to confirm the response t
 
 \item{test-PF4: Test loading in visual assets \\}
 
-Type: Functional, Dynamic, Automated
+Type: Functional, Dynamic, \sout{Manual} \textcolor{red}{Automated}
 					
 Initial State: Empty PyGame window.
 
 Input: All images from the visual assets are loaded into the PyGame window.
 					
-Output: IO Exception error is generated if one of the images are not able to load into the PyGame window (does not exist or can not access file).
+Output: IO Exception error is generated if one of the images are not able to load into the PyGame window (does not exist or can not access file). \textcolor{red}{And all the loading takes less than LOAD\_ASSET\_TIME.}
 					
 How test will be performed: A automated test will be used to verify that all the visual assets can be accessed and loaded into the PyGame window. However in the case there is one image not able,  an IO Exception error will be generated.
 
@@ -551,8 +600,6 @@ Input: The player executes a command sequence to run the game.
 Output: The game shall run without any crashes or errors.
 					
 How test will be performed: A visual test will be used to confirm the game is able to run on these OPERATING\_SYSTEMS. 
-
-
  
 \end{enumerate}
 
@@ -627,8 +674,6 @@ How test will be performed: A visual test will be used to confirm the game is ab
   \end{center}
 \end{table}
 
-
-
 \section{Tests for Proof of Concept}
 		
 \paragraph{Character Movement}
@@ -680,14 +725,14 @@ How test will be performed: A visual test will be used to verify that the colour
 
 	
 \section{Comparison to Existing Implementation}	
-N/A
+\sout{N/A} \textcolor{red}{The original implementation will be used to test various properties of the game, to give a better understanding of how playable the redevelopment is with respect to the original game. For example, testing for the minimum and maximum time of obstacles spawning, various points of collision detection between the character and obstacle, the difficulty of the game as the score increases (how manageable is it to play), and the similarity in character movements.}
 
 \section{Unit Testing Plan}
 The project contains many modules that are highly coupled. This makes it difficult to create unit test cases for specific components. As the application does not produce any files, unit testing for output files is not needed. 
 \subsection{Unit testing of internal functions}
-N/A
+\sout{N/A} \textcolor{red}{For unit testing, many unit test will be done manually such as DisplayCharacter, DisplayPowerups, DisplayObstacles, etc. For automated tests cases such as LoadAssets, making sure each assets is able to load in properly (i.e not throw an exception). In addition for automated test cases for unit testing, they should have 100\% code coverage. } 
 \subsection{Unit testing of output files}		
-N/A
+\sout{N/A} \textcolor{red}{Since the application does not create any output files, there is no need to test for output files. Even though the application uses image and sound assets as external/output files, this is tested in 6.1}
 
 \newpage
 
@@ -699,35 +744,46 @@ Additional information of the document.
 The definition of the requirements calls for SYMBOLIC\_CONSTANTS. Their values are defined in this section for easy maintenance.
 \begin{table}[H]
 \caption{\bf Symbolic Parameter Table}
-\resizebox{0.9\linewidth}{!}{\begin{tabular}{|l|p{0.4\linewidth}|l|}
+\centering
+\resizebox{0.73\linewidth}{!}{\begin{tabular}{|l|p{0.4\linewidth}|l|}
 \hline
 \multicolumn{1}{|l}{\bfseries Symbolic Parameter} & \multicolumn{1}{|l|}{\bfseries Description} & \multicolumn{1}{l|}{\bfseries Value}\\
 \hline
 GIVEN\_OPTIONS & Changes we can make in settings menu & Background Colour,\\ & & Background Music,\\ & & Sound effect \\
 \hline
-PIXEL\_JUMP & The height of the dinosaur when it jumps. & UNDEFINED \\
+PIXEL\_JUMP & The height of the dinosaur when it jumps. & \sout{UNDEFINED}\textcolor{red}{20} \\
 \hline
-PIXEL\_DUCK & The height of the dinosaur when it ducks. &  UNDEFINED \\
+PIXEL\_DUCK & The height of the dinosaur when it ducks. &  \sout{UNDEFINED}\textcolor{red}{10} \\
 \hline
-RATE & The ``gravity'' of the game at which the dinosaur is moving up and down the y-axis at a constant rate & UNDEFINED \\
+RATE & The ``gravity'' of the game at which the dinosaur is moving up and down the y-axis at a constant rate & \sout{UNDEFINED}\textcolor{red}{1} \\
 \hline
 KEYBOARD\_UP & Keyboard key that moves the onscreen vertically up. & Up Arrow \\
 \hline
 KEYBOARD\_DOWN & Keyboard key that moves the onscreen character duck. & Down Arrow \\
 \hline
-KEYBOARD\_P & Keyboard key that pauses/resumes the game when the game is running/paused. & P\\
+KEYBOARD\_P & Keyboard key that pauses\sout{/resumes} the game when the game is running\sout{/paused}. & P\\
 \hline
-KEYBOARD\_R & Keyboard key that restarts the game in the end menu. & R \\
+KEYBOARD\_R & Keyboard key that restarts the game in the end menu. \textcolor{red}{or resumes the game in pause menu} & R \\
 \hline
-KEYBOARD\_B & Keyboard key that quits the game in the end menu. & B \\
+\textcolor{red}{KEYBOARD\_Q} & \textcolor{red}{Keyboard key that quit the game in the main and end menu.} & \textcolor{red}{Q} \\
+\hline
+\textcolor{red}{KEYBOARD\_S} & \textcolor{red}{Keyboard key that accesses the settings menu.} & \textcolor{red}{S} \\
+\hline
+\textcolor{red}{KEYBOARD\_SPACE} & \textcolor{red}{Keyboard key to start playing the game from the main menu.} & \textcolor{red}{SPACE} \\
+\hline
+KEYBOARD\_B & Keyboard key that \sout{quits the game in the end menu.}\textcolor{red}{gets the user back to the main menu in the setting/instruction menu.} & B \\
+\hline
+\textcolor{red}{KEYBOARD\_H} & \textcolor{red}{Keyboard key that shows the instruction in the main menu.} & \textcolor{red}{H} \\
 \hline
 INSTRUCTION\_DISPLAY\_TIME & The time that instructions appears on the screen. & 4 second \\
 \hline
-SPECIFIED\_KEYS & All the keys we used in the game system. &  UP Arrow, Down Arrow \\ & & P, B, R \\
+SPECIFIED\_KEYS & All the keys we used in the game system. &  UP Arrow, Down Arrow \\ & & P, B, R \textcolor{red}{Q, S, SPACE, H} \\
 \hline
 MINIMUM\_SPAWN\_TIME & The minimum time between when one object is spawned, the subsequent object should be spawned at a minimum time after its previous object was spawned.  & 2 seconds \\
 \hline
 RESPONSE\_TIME & The maximum time delay between when a user provides a keyboard input, the system shall recognize this input within a certain time frame. & 5 milliseconds \\
+\hline
+\textcolor{red}{LOAD\_ASSETS\_TIME} & \textcolor{red}{the maximum time delay for loading all assets.} & \textcolor{red}{5 seconds} \\
 \hline
 FPS\_GOAL & The desired FPS of the game. & 45 \\
 \hline
@@ -768,6 +824,6 @@ Questions for user's to rate the usability and ease of play of the game. From a 
 \begin{figure}[!h]
     \centering
     \includegraphics[width=0.2\textwidth]{cactus.png}
-    \caption{Visual representation of obstacles in the game.}
+     \caption{Visual representation of \textcolor{red}{an} obstacle\sout{s} in the game.}
 \end{figure}
 \end{document}
